LAU-1217 enable fortify scan